UI: fix codeblocks overflowing on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -540,6 +540,7 @@ div.svelte-362y77>*, div.svelte-362y77>.form>* {
 .message-body pre > code {
     white-space: pre !important;
     overflow-x: auto !important;
+    max-width: calc(100dvw - 39px);
     border: 1px solid #666;
     border-radius: 5px;
     font-size: 82%;
